Review the way that some "multi-values map" are handled. In the netCDF case, group together the domains (set of axes) that are subset or superset of another domain.